# pyscreenrec

./: .gitignore  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
examples/: gui_recorder.py
pyscreenrec/: __init__.py  benchmark.py  test.py
